--- a/day02/css/styles.css
+++ b/day02/css/styles.css
@@ -7,9 +7,8 @@ body {
 }
 
 nav {
-  position: fixed;
-  top: 60px;
-  width: 100%;
+  position: sticky;
+  top: 0;
   z-index: 10;
 }
 
@@ -21,20 +20,15 @@ nav {
   width: 100%;
   height: 60px;
   color: white;
-  position: fixed;
-  top: 0;
-  z-index: 11;
 }
 .logo__nav ul {
   padding: 0;
   margin: 0;
   display: flex;
   gap: 3px;
-  height: 50px;
 }
 .logo__nav li {
   flex: 33.33%;
-  height: 100%;
   line-height: 50px;
   text-align: center;
   list-style-type: none;
@@ -53,16 +47,13 @@ article {
 }
 
 .card {
-  flex: 33.33%;
-}
-
-.card {
   text-align: center;
+  flex: 33.33%;
 }
 .card__img {
   height: 300px;
-  flex: 33.33%;
-  transition: transform 0.5s ease;
+  overflow: hidden;
+  margin-bottom: 10px;
 }
 .card__img img {
   width: 100%;
@@ -70,26 +61,22 @@ article {
   -o-object-fit: cover;
      object-fit: cover;
   z-index: 0;
+  transition: transform 0.5s ease;
 }
-.card__btn button {
+.card__btn {
   width: 96%;
-  height: 35px;
+  line-height: 35px;
   transform: skewX(-30deg);
   border: 1.5px solid rgb(251, 97, 123);
   box-shadow: 5px 4px 5px rgb(251, 97, 123);
   background-color: white;
   transition: all 0.7s ease;
 }
-.card__transform {
-  height: 300px;
-  overflow: hidden;
-  margin-bottom: 10px;
-}
 
-.card__img:hover {
+.card__img a:hover img {
   transform: scale(1.1);
 }
-.card__btn button:hover {
+.card__btn:hover {
   background-color: rgb(251, 97, 123);
   color: white;
 }
