--- a/day02/scss/styles.scss
+++ b/day02/scss/styles.scss
@@ -24,21 +24,21 @@ nav{
         width: 100%;
         height: 60px;
         color: white;
-    }
-    &__nav ul{
+    }}
+    ul{
         padding: 0;
         margin: 0;
         display: flex;
         gap: 3px;
     }
-    &__nav li{
+    li{
         flex: 33.33%;
         line-height: 50px;
         text-align: center;
         list-style-type: none;
         background-color: palevioletred;
     }
-}
+
 
 article{
     margin-top: 160px;
