--- a/day03/scss/foundation/_base.scss
+++ b/day03/scss/foundation/_base.scss
@@ -22,3 +22,7 @@ li{
 a{
     text-decoration: none;
 }
+
+.l-wrap__inner, .explore__inner, .in-touch-form__inner, .service__inner{
+    width: 1400px;
+}
