--- a/day03/scss/styles.scss
+++ b/day03/scss/styles.scss
@@ -12,6 +12,7 @@
 @import 'object/project/_service.scss';
 @import 'object/project/_explore.scss';
 @import 'object/project/_activity-card.scss';
+@import 'object/project/_form.scss';
 
 
 
